[tool.poetry]
name = "peodd"
version = "0.1.0"
description = "Script to export the pyproject.toml dev-dependencies to a txt file."
authors = [
    "Venu Vardhan Reddy Tekula <venuvardhanreddytekula8@gmail.com>"
]
license = "GPL-3.0+"

readme = "README.md"

repository = "https://github.com/vchrombie/peodd"

packages = [
    { include = "peodd"},
    { include = "tests", format = "sdist" },
]

include = [
    "AUTHORS",
    "README.md",
    "LICENSE",
    "NEWS"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vchrombie/peodd/issues"

[tool.poetry.scripts]
peodd = 'peodd.peodd:main'

[tool.poetry.dependencies]
python = "^3.6"
tomlkit = "^0.5.8"
click = "^7.0"
release-tools = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
